--- a/.github/workflows/main_attrition-predictor-app-cse26.yml
+++ b/.github/workflows/main_attrition-predictor-app-cse26.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.py'
+      - 'requirements.txt'
+      - '**.pkl'
   workflow_dispatch:
 
 jobs:
